[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/PageManager.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/Arrow2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Scenes/Arrow1.tscn" type="PackedScene" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Page" type="Node2D" parent="."]

[node name="Arrow1" parent="." instance=ExtResource( 3 )]

[node name="Arrow2" type="TextureButton" parent="."]
margin_left = 897.293
margin_top = 495.306
margin_right = 1197.29
margin_bottom = 795.306
rect_scale = Vector2( 0.4, 0.4 )
button_mask = 7
texture_normal = ExtResource( 2 )
[connection signal="pressed" from="Arrow2" to="." method="_on_Arrow2_pressed"]
